# notaris-dataset-generator

./: .gitignore  Cargo.toml  dataset_atrbpn.json  notary-ai-dataset-generator-key.pem
backend/: Cargo.toml  dataset_atrbpn.json
backend/src/: main.rs
extension/: content.js  manifest.json
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.module.css  layout.tsx  page.module.css  page.tsx
web/src/app/akta/[id]/: page.module.css  page.tsx
web/src/lib/: api.ts
